// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketStatus component closed ticket 1`] = `
<span
  id="change-status-button"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 wrapper small ui-button-fill-cef1 ui-button-primary-cef1 ui-button-small-cef1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      <i
        class="material-icons icon"
      >
        check
      </i>
    </span>
  </button>
</span>
`;

exports[`TicketStatus component open ticket 1`] = `
<span
  id="change-status-button"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
    type="button"
  >
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
    >
      check
    </i>
    <span
      class="ui-button-content-cef1"
    >
      Close
    </span>
  </button>
</span>
`;
